<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="#f5f5f5"
    tools:context="vendoee.vvpvtltd.vendoee.updateRetailerProfile">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#3F51B5"
        android:elevation="10dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

    </android.support.v7.widget.Toolbar>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="#3949AB"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/facing_problem"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingLeft="25dp"
                    android:text="Facing Problem? Call us"
                    android:textColor="#ffffff"
                    android:textSize="23dp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/call"
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:paddingBottom="10dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingTop="10dp"
                        android:src="@drawable/phone_white"
                        android:layout_alignParentRight="true" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:id="@+id/card_view"
                    android:layout_width="match_parent"
                    android:layout_marginTop="15dp"
                    android:layout_height="200dp">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="200dp"
                        android:layout_height="230dp"
                        android:layout_gravity="center"
                        android:src="@drawable/image" />

                </android.support.v7.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="15dp"
                    android:gravity="center"
                    android:text="(Click above to update image)"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/oname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Shop Name"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/bname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Owner's Name"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Email ID"
                        android:inputType="textEmailAddress" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/open"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Shop Opening Time"
                        android:inputType="time"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/close"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Shop Closing Time"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Description"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/baddrTIL"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="Shop Address (Click to update)"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/baddr"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"

                        android:clickable="false"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/cityTIL"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/city"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"

                        android:clickable="false"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/stateTIL"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/state"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/state"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"

                        android:clickable="false"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/countryTIL"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/country"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/country"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"

                        android:clickable="false"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/pinTIL"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/pin_code"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/pin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberSigned"
                        android:clickable="true"
                        android:cursorVisible="true"
                        android:focusable="true"
                        android:focusableInTouchMode="true"/>
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:text=" Cashless Transaction?"
                    android:textSize="18dp"
                    android:layout_weight="1" />

                <RadioGroup
                    android:id="@+id/radioCash"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <RadioButton
                        android:id="@+id/radioMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Yes" />

                    <RadioButton
                        android:id="@+id/radioFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="No" />
                </RadioGroup>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:text=" Do you provide home delivery?"
                    android:textSize="18dp"
                    android:layout_weight="1"/>

                <RadioGroup
                    android:id="@+id/radiodelivery"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <RadioButton
                        android:id="@+id/radioyes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Yes" />

                    <RadioButton
                        android:id="@+id/radiono"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="No" />
                </RadioGroup>

                <!--

                            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:text=" Are a brand shop?"
                    android:textSize="18dp"
                    android:layout_weight="1"/>

                <RadioGroup
                    android:id="@+id/radiobrand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <RadioButton
                        android:id="@+id/radiobyes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Yes" />

                    <RadioButton
                        android:id="@+id/radiobno"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="No" />
                </RadioGroup>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/dealsbTIL"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="Brand name {Ex - Levis,VeroModa,Apple,etc}"
                    android:layout_weight="1"
                    android:visibility="invisible">

                    <EditText
                        android:id="@+id/dealsb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>

                -->

                <Button
                    android:id="@+id/button"
                    android:onClick="updateIt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#3F51B5"
                    android:textColor="#ffffff"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="15dp"
                    android:text="Update"
                    android:layout_weight="1" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>